[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
three-d = { version = "0.17.0", features=["egui-gui"] }
three-d-asset = {version = "0.7",features = ["gltf", "jpeg", "obj", "hdr"] }
rfd = "0.14.1"
anyhow = "*"
rand = "0.8.4"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"
